Resources/Public/Stylesheets/Partials/Menu.less
div.project-buttons {
	padding: 10px 0;
	background-color: @main-color !important;
	width: 100%;
	.fa {
		font-size: 130%;
	}

	.btn {
		color: #000;
		margin-right: 15px;
	}
	.btn[disabled] {
		opacity: 0.5 !important;
	}
	.project-brand {
		color: #999999;
		font-size: 28px;
		font-weight: 600;
		line-height: 40px;
		height: 40px;
	}
}

